# llama-cpp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  MTP.md  MULTIMODAL.md  README.md  WINDOWS.md  test-build.Dockerfile
.github/: prebuilt-matrix.json
.github/actions/setup-vulkan-sdk-windows/: action.yml
.github/scripts/: collect-linux-prebuilt.sh  collect-windows-prebuilt.sh  filter-prebuilt-matrix.py
.github/workflows/: llama-cpp-rs-check.yml  prebuilt-llama.yml  publish-upon-release.yml  update-llama-cpp.yml  update-toml-version.yaml
examples/: common.rs  detokenize.rs  model_info.rs  usage.rs
examples/batched-bench/: Cargo.toml
examples/batched-bench/src/: main.rs
examples/chat/: Cargo.toml  README.md
examples/chat/src/: main.rs
examples/cvector-generator/: Cargo.toml
examples/cvector-generator/src/: main.rs
examples/eagle/: Cargo.toml  README.md
examples/eagle/src/: main.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
examples/export-lora/: Cargo.toml
examples/export-lora/src/: main.rs
examples/fit-params/: Cargo.toml
examples/fit-params/src/: main.rs
examples/imatrix/: Cargo.toml
examples/imatrix/src/: main.rs
examples/incremental-chat/: Cargo.toml
examples/incremental-chat/src/: bench.rs  charts.rs  line_editor.rs  main.rs  prefill.rs
examples/mtmd/: Cargo.toml
examples/mtmd/src/: main.rs
examples/mtp/: Cargo.toml
examples/mtp/src/: main.rs
examples/multimodal/: Cargo.toml
examples/multimodal/src/: main.rs
examples/perplexity/: Cargo.toml
examples/perplexity/src/: main.rs
examples/quantize/: Cargo.toml
examples/quantize/src/: main.rs
examples/rpc/: Cargo.toml
examples/rpc/src/: main.rs
examples/server/: Cargo.toml  README.md
examples/server/src/: main.rs  tools.rs
examples/server/tests/: integration.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/split_model/: Cargo.toml
examples/split_model/src/: main.rs
examples/structured/: Cargo.toml
examples/structured/src/: main.rs
examples/tokenize/: Cargo.toml
examples/tokenize/src/: main.rs
examples/tts/: Cargo.toml
examples/tts/src/: main.rs
examples/turbo-quant/: Cargo.toml
examples/turbo-quant/src/: main.rs
llama-cpp-4/: Cargo.toml  README.md
llama-cpp-4/src/: common.rs  context.rs  eagle.rs  fit.rs  ggml.rs  lib.rs  llama_batch.rs  model.rs  mtmd.rs  mtp.rs  prelude.rs  quantize.rs  sampling.rs  token.rs
llama-cpp-4/src/context/: kv_cache.rs  memory_breakdown.rs  params.rs  perf.rs  tensor_capture.rs
llama-cpp-4/src/context/params/: advanced.rs  mod.rs  types.rs
llama-cpp-4/src/grammar/: json.gbnf
llama-cpp-4/src/model/: params.rs
llama-cpp-4/src/model/params/: kv_overrides.rs
llama-cpp-4/src/multimodal/: bitmap.rs  chunks.rs  context.rs  error.rs  mod.rs
llama-cpp-4/src/rpc/: backend.rs  error.rs  mod.rs  server.rs
llama-cpp-4/src/token/: data_array.rs  detokenizer.rs
llama-cpp-4/tests/: test_context_params.rs  test_fit.rs  test_ggml.rs  test_integration.rs  test_lib.rs  test_model.rs  test_prelude.rs  test_q1.rs  test_sampler.rs
llama-cpp-4/tests/support/: mod.rs  model.rs
llama-cpp-sys-4/: Cargo.toml  README.md  build.rs  prebuilt_download.rs  wrapper.h
llama-cpp-sys-4/ext_shim/: ext_shim.cpp  ext_shim.h
llama-cpp-sys-4/mtp_shim/: mtp_shim.cpp  mtp_shim.h
llama-cpp-sys-4/patches/: 0001-q1-quantization.patch  0002-mtp.patch
llama-cpp-sys-4/src/: common.rs  lib.rs
scripts/: bench-mtp.sh  fetch-eagle3.sh  fetch-prebuilt.sh  fetch-test-model.sh  setup-eagle3.sh  testbench.sh
