[workspace]
resolver = "2"
members = [
    "llama-cpp-sys-4",
    "llama-cpp-4",
    "examples/embeddings",
    "examples/simple",
    "examples/chat",
    "examples/split_model",
]

[workspace.dependencies]
# core library deps
thiserror = "2.0.17"
tracing = "0.1"

# examples and benchmarks
hf-hub = { version = "0.4.3" }
criterion = "0.5.1"
pprof = "0.14.0"
bindgen = "0.72.1"
cc = "1.2.45"
anyhow = "1.0.100"
clap = "4.5.53"
encoding_rs = "0.8.35"

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }
