[package]
name = "batched-bench"
version = "0.2.20"
edition = "2021"

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.2.20" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["llama-cpp-4/cuda"]
metal = ["llama-cpp-4/metal"]
vulkan = ["llama-cpp-4/vulkan"]
native = ["llama-cpp-4/native"]

[lints]
workspace = true
