[package]
name = "eagle"
version = "0.4.2"
edition = "2021"
description = "Example: EAGLE-3 speculative decoding (target + draft model) for llama-cpp-4"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4", version = "0.4.2" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["llama-cpp-4/cuda"]
metal = ["llama-cpp-4/metal"]
vulkan = ["llama-cpp-4/vulkan"]
