[package]
name = "openai-server"
version = "0.1.94"
edition = "2021"
publish = false
description = "Minimal OpenAI-compatible chat completion server"

[dependencies]
llama-cpp-4 = { path = "../../llama-cpp-4" }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = { workspace = true }
hf-hub = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["sync", "rt"] }
futures-util = "0.3"

[features]
cuda = ["llama-cpp-4/cuda"]
metal = ["llama-cpp-4/metal"]
vulkan = ["llama-cpp-4/vulkan"]

[lints]
workspace = true
